@@ -1,4 +1,4 @@
-/* $OpenBSD: authfd.c,v 1.74 2006/03/30 09:58:15 djm Exp $ */
+/* $OpenBSD: authfd.c,v 1.75 2006/07/08 21:47:12 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -39,6 +39,7 @@
 
 #include <sys/types.h>
 #include <sys/un.h>
+#include <sys/socket.h>
 
 #include <openssl/evp.h>
 
