@@ -28,6 +28,7 @@
 #include "includes.h"
 
 #include <sys/types.h>
+#include <sys/socket.h>
 #include <sys/wait.h>
 
 #ifdef HAVE_PATHS_H
