@@ -1,4 +1,4 @@
-/* $OpenBSD: monitor_fdpass.c,v 1.8 2006/03/25 13:17:02 djm Exp $ */
+/* $OpenBSD: monitor_fdpass.c,v 1.9 2006/07/08 21:47:12 stevesk Exp $ */
 /*
  * Copyright 2001 Niels Provos <provos@citi.umich.edu>
  * All rights reserved.
@@ -26,6 +26,8 @@
 
 #include "includes.h"
 
+#include <sys/types.h>
+#include <sys/socket.h>
 #include <sys/uio.h>
 
 #include "log.h"
