@@ -1,4 +1,4 @@
-/* $OpenBSD: nchan.c,v 1.53 2006/03/25 13:17:02 djm Exp $ */
+/* $OpenBSD: nchan.c,v 1.54 2006/07/08 21:47:12 stevesk Exp $ */
 /*
  * Copyright (c) 1999, 2000, 2001, 2002 Markus Friedl.  All rights reserved.
  *
@@ -24,6 +24,9 @@
  */
 
 #include "includes.h"
+
+#include <sys/types.h>
+#include <sys/socket.h>
 
 #include "ssh1.h"
 #include "ssh2.h"
