@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp.c,v 1.82 2006/05/17 12:43:34 markus Exp $ */
+/* $OpenBSD: sftp.c,v 1.83 2006/07/08 21:47:12 stevesk Exp $ */
 /*
  * Copyright (c) 2001-2004 Damien Miller <djm@openbsd.org>
  *
@@ -22,6 +22,7 @@
 # include <sys/stat.h>
 #endif
 #include <sys/ioctl.h>
+#include <sys/socket.h>
 #include <sys/wait.h>
 
 #ifdef HAVE_PATHS_H
